# SmallPrograms

./: CMakeLists.txt  autocommit.py
GUI/: CMakeLists.txt  main.cpp  physicsEngine.cpp
supergrep/: CMakeLists.txt
